--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,8 +1,9 @@
 fixtures:
   forge_modules:
-    stdlib: 'puppetlabs-stdlib'
     epel: 'stahnma-epel'
   repositories:
+    stdlib:
+      repo: git://github.com/Yelp/puppetlabs-stdlib.git
     apt:
       repo: git://github.com/puppetlabs/puppetlabs-apt.git
       ref: 2.1.0
