--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,11 @@
 fixtures:
   repositories:
-    apt: git://github.com/puppetlabs/puppetlabs-apt.git
-    stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
+    apt:
+      repo: "git://github.com/puppetlabs/puppetlabs-apt.git"
+      ref: "2.1.0"
+    stdlib:
+      repo: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
+      ref: "4.5.0"
     epel: git://github.com/stahnma/puppet-module-epel.git
   symlinks:
     docker: "#{source_dir}"
